# shitboard

./: .gitignore  Cargo.toml  README.md  bun.lockb  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
.github/workflows/: dist.yml
api/: .gitignore  Cargo.toml
api/src/: api.rs  error.rs  main.rs
app/: Cargo.toml
app/src/: error.rs  main.rs  req.rs
src/: api.rs  app.css  error.rs  main.rs
src/lib/: index.ts  init.ts  stores.ts  utils.ts
src/lib/components/ui/slider/: slider.svelte
src/lib/server/: mem.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  AddModal.svelte  SettingsPopup.svelte
static/: robots.txt
static/files/: Das ist ein Meeeeme!.json  Einfach mal Googlen...json
test/cert/: gen.sh
view/: package.json  svelte.config.js  vite.config.ts
view/src/lib/: utils.ts
view/src/routes/: +layout.svelte  +page.svelte  AddModal.svelte  Popup.svelte  SettingsPopup.svelte
web/: bun.lockb  components.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
web/src/: app.html  app.pcss
web/src/lib/: api.ts  index.ts  stores.ts
web/src/lib/components/ui/alert/: alert-description.svelte  alert-title.svelte  alert.svelte  index.ts
web/src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte
web/src/lib/components/ui/button/: index.ts
web/src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-overlay.svelte
web/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-separator.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
web/src/lib/components/ui/input/: input.svelte
web/src/lib/components/ui/label/: label.svelte
web/src/lib/components/ui/slider/: slider.svelte
web/src/routes/: +layout.svelte  +page.svelte  AddDialog.svelte  AddModal.svelte  Popup.svelte
(+1 files in other folders)
