[package]
name = "shitboard-rs"
description = "The Backend for the shitboard app"
version = "0.1.0"
edition = "2021"
authors = ["nils@wrenger.net"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
base64 = "0.22.0"
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = "4.5.3"
hyper = "1.2.0"
infer = "0.15.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
