[package]
name = "shitboard"
description = "The shitboard App"
version = "0.1.4"
edition = "2021"
authors = ["nils@wrenger.net"]

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
axum = "0.7.4"
base64 = "0.22.0"
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = "4.5.3"
hyper = "1.2.0"
infer = "0.15.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
