[package]
name = "shitboard-app"
description = "The shitboard App"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
eframe = { version = "0.27.2", features = ["persistence"] }
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
rodio = "0.17.3"
serde = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
